--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="logout">退出登录</string>
     <string name="modify">修改</string>
     <string name="login">登录</string>
-    <string name="user">用户名</string>
+    <string name="user">账号</string>
     <string name="password">密码</string>
     <string name="protocol">登录即同意《爱猜歌服务条款》\n  <font color='#FF0000'>用户协议</font> 和 <font color='#FF0000'>隐私政策</font></string>
     <string name="user_register">用户注册</string>
@@ -32,4 +32,6 @@
     <string name="code">验证码</string>
     <string name="get_code">获取验证码</string>
     <string name="next">下一步</string>
+    <string name="register">注册</string>
+    <string name="sure_password">确认密码</string>
 </resources>
