--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="bottom_friend">歌友</string>
     <string name="bottom_me">我的</string>
     <string name="album">专辑</string>
-    <string name="copyright_2018">爱猜歌 ©copyright 2018</string>
+    <string name="copyright_2018">Solo音乐 ©copyright 2018</string>
     <string name="_3s">倒计时3s</string>
     <string name="update">检查更新</string>
     <string name="setting">清除缓存</string>
@@ -24,7 +24,10 @@
     <string name="modify">修改</string>
     <string name="login">登录</string>
     <string name="user">账号</string>
+    <string name="user_or_mobile">账号/手机号</string>
     <string name="password">密码</string>
+    <string name="new_password">新密码</string>
+    <string name="old_password">旧密码</string>
     <string name="protocol">登录即同意《爱猜歌服务条款》\n  <font color='#FF0000'>用户协议</font> 和 <font color='#FF0000'>隐私政策</font></string>
     <string name="user_register">用户注册</string>
     <string name="forget_password">忘记密码？</string>
@@ -33,7 +36,16 @@
     <string name="get_code">获取验证码</string>
     <string name="next">下一步</string>
     <string name="register">注册</string>
+    <string name="change">修改</string>
     <string name="sure_password">确认密码</string>
     <string name="picture">相册</string>
     <string name="camera">拍照</string>
+    <string name="change_password">修改密码</string>
+    <string name="reset_password">重置密码</string>
+    <string name="reset">重置</string>
+    <string name="save_photo">保存到相册</string>
+    <string name="developer">开发者:高运</string>
+    <string name="contact">联系QQ:1984629668</string>
+    <string name="my_code">我的二维码</string>
+    <string name="save_long_photo">长按二维码保存到相册</string>
 </resources>
