--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="singer_info">查看歌手信息</string>
     <string name="cancel">取消</string>
     <string name="bottom_listen">听歌</string>
-    <string name="bottom_record">最近</string>
+    <string name="bottom_recipe">美食</string>
     <string name="bottom_friend">歌友</string>
     <string name="bottom_me">我的</string>
     <string name="album">专辑</string>
@@ -58,4 +58,5 @@
     <string name="off">未开启</string>
     <string name="my_music_list">我的歌单(0)</string>
     <string name="data_empty">暂无数据</string>
+    <string name="detail">详情</string>
 </resources>
