--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="new_music">最新音乐</string>
     <string name="search">搜索</string>
     <string name="tip">\n温馨提示： \n你可以搜索歌手，歌名，专辑</string>
+    <string name="tip_friend">\n温馨提示： \n你可以搜索手机号，昵称</string>
     <string name="bottom_tip">我也是有底的呀</string>
     <string name="singer_info">查看歌手信息</string>
     <string name="cancel">取消</string>
