--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,5 @@
     <string name="default_time">00:00</string>
     <string name="info">消息</string>
     <string name="force_update_tip">此次版本需要强制升级，部分功能才可正常使用，如不立即更新，则将退出APP</string>
+    <string name="info_detail">通知详情</string>
 </resources>
