--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,6 @@
     <string name="info">消息</string>
     <string name="force_update_tip">此次版本需要强制升级，部分功能才可正常使用，如不立即更新，则将退出APP</string>
     <string name="info_detail">通知详情</string>
+    <string name="album_name">歌单名称</string>
+    <string name="save">保存</string>
 </resources>
