--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,5 @@
     <string name="info_detail">通知详情</string>
     <string name="album_name">歌单名称</string>
     <string name="save">保存</string>
+    <string name="start_use">开始体验</string>
 </resources>
